collab title fix to work on mobile

--- a/RetailEnt/style.css
+++ b/RetailEnt/style.css
@@ -162,12 +162,13 @@ strong
     bottom: 0.7rem;
     left: 0.3rem;
     background-color: rgba(0, 0, 0, 0.726);
-    padding: 0.6rem 4rem;
+    padding: 0.6rem 2rem;
+    font-size: min(1.2rem, 2.8vw);
 }
 
 .colabTitle > strong
 {
-    font-size: 1.6rem;
+    font-size: min(1.6rem, 3.4vw);
 }
 /*
 .topbox
